--- a/_config.yml
+++ b/_config.yml
@@ -103,5 +103,5 @@ theme: async
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo:  git@github.com/ZXJC-niusile/ZXJC-niusile.github.io.git
+  repo: git@github.com:ZXJC-niusile/ZXJC-niusile.github.io.git
   branch: main
